--- a/index.html
+++ b/index.html
@@ -1,61 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trilha de CSS - DIO</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <header class="banner">
-    <div class="banner-content">
-      <div class="logo">
-        <img src="assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trilha de CSS - DIO</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header class="banner">
+      <div class="banner-content">
+        <div class="logo">
+          <img
+            src="assets/images/logo.png"
+            title="Logotipo Trilha de CSS DIO"
+            alt="Logotipo Trilha de CSS DIO"
+          />
+        </div>
+        <h1>Trilha de CSS da DIO</h1>
+        <p>
+          A nova Trilha de CSS da DIO está disponível. <br />
+          Acesse já e aprenda do zero como desenvolver sites profissionais.
+        </p>
+        <button>Quero me inscrever</button>
       </div>
-      <h1>Trilha de CSS da DIO</h1>
-      <p>A nova Trilha de CSS da DIO está disponível. <br> Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
-    </div>
-  </header>
-  <main>
-    <section id="course-content">
-      <h2>O que vou aprender?</h2>
-      <p>
-        Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a 
-        desenvolver <br> sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.
-      </p>
-      <div class="modules-list">
-        <div class="module">
-          <span>Módulo 01:</span> primeiros passos com CSS
+    </header>
+
+    <main>
+      <section id="course-content">
+        <h2>O que vou aprender?</h2>
+        <p>
+          Temos 3 módulos recheados de conteúdos do básico ao avançado para que
+          você aprenda a desenvolver <br />
+          sites profissionais utilizando somente HTML e CSS: sem nenhuma
+          biblioteca ou framework a mais.
+        </p>
+        <div class="modules-list">
+          <div class="module">
+            <span>Módulo 01:</span> primeiros passos com CSS
+          </div>
+          <div class="module">
+            <span>Módulo 02:</span> trabalhando com layouts no CSS
+          </div>
+          <div class="module">
+            <span>Módulo 03:</span> refinando os estilos CSS das nossas páginas
+          </div>
         </div>
-        <div class="module">
-          <span>Módulo 02:</span> trabalhando com layouts no CSS
+      </section>
+
+      <section id="transform-world">
+        <div class="transform-world-container">
+          <p>TRANSFORME <br />O MUNDO <br />COM A GENTE</p>
         </div>
-        <div class="module">
-          <span>Módulo 03:</span> refinando os estilos CSS das nossas páginas
+      </section>
+
+      <section id="professional-challenges">
+        <h2>Evolua e encare novos desafios <br />profissionais</h2>
+        <img
+          src="assets/images/professional-challenges.png"
+          title="Homem lendo depoimentos em um tablet"
+          alt="Homem lendo depoimentos em um tablet"
+        />
+        <div class="professional-challenges-p">
+          <p>
+            Junte-se ao nosso ecossistema e transforme o mundo com a gente!
+            Todos os dias dezenas de empresas acessam a nossa plataforma em
+            busca dos talentos mais criativos, dinâmicos e colaborativos, além
+            do conhecimento técnico. A nossa missão é te preparar para que você
+            conecte-se com as melhores oportunidades.
+          </p>
         </div>
+      </section>
+    </main>
+    <footer class="text-center">
+      <div class=" p-5">
+        <img
+          class="dio-logo"
+          src="assets/images/dio-logo.png"
+          title="Logotipo DIO com o texto make the change"
+          alt="Logotipo DIO com o texto make the change"
+        />
+        <p>
+          Acesse <a href="https://dio.me" class="link-dio">dio.me</a> e se
+          cadastre agora
+        </p>
       </div>
-    </section>
-    <section id="transform-world">
-      <p>TRANSFORME O MUNDO COM A GENTE</p>
-    </section>
-    <section id="professional-challenges">
-      <h2>Evolua e encare novos desafios profissionais</h2>
-      <img src="assets/images/professional-challenges.png" title="Homem lendo depoimentos em um tablet" alt="Homem lendo depoimentos em um tablet">
-      <p>
-        Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas 
-        acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, 
-        além do conhecimento técnico. 
-        A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.
-      </p>
-    </section>
-  </main>
-  <footer>
-    <img class="dio-logo" src="assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
-    <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
